--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 {% block article_body %}
 {% markdown %}
 
-...the defense of the English language implies more than this, and perhaps it is best to start by saying what it does _not_ imply.
+...thvdsdsbjk defense of the English language implies more than this, and perhaps it is best to start by saying what it does _not_ imply.
 
 <figure class="graphic graphic-b-1 graphic-pad-1">
   <img alt="" src="https://image.webservices.ft.com/v1/images/raw/http%3A%2F%2Fcom.ft.imagepublish.prod.s3.amazonaws.com%2Fc4bf0be4-7c15-11e4-a7b8-00144feabdc0?source=ig&fit=scale-down&width=700"></img>
