--- a/client/index.html
+++ b/client/index.html
@@ -1081,7 +1081,7 @@ Gwadar is part of a much bigger ambition, driven by <a href="https://www.ft.com/
 <!-- Mobile main map end -->
 
 <div class=''  data-o-grid-colspan="hide S12 Scenter">
-<figure class="graphic graphicWidth">
+<figure class="graphic picWidth">
   <img alt="" src="images/sub.jpg"></img>
     <figcaption class="o-typography-caption">
     People's Liberation Army Navy submarine off Qingdao in Shandong Province © Guang Niu/AFP/Getty Images
