--- a/client/index.html
+++ b/client/index.html
@@ -107,7 +107,7 @@
 				font-size:14px;
 				line-height:16px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Main-map_560-main_map_560 .ig-ai-pstyle9 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -307,7 +307,7 @@
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:16px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Main-map_760-main_map_760 .ig-ai-pstyle9 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -497,7 +497,7 @@
 				font-size:18px;
 				line-height:21px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Main-map_970-main_map_970 .ig-ai-pstyle7 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -683,7 +683,7 @@
 				font-size:18px;
 				line-height:21px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Main-map_1220-main_map_1220 .ig-ai-pstyle6 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -868,7 +868,7 @@ Gwadar is part of a much bigger ambition, driven by <a href="https://www.ft.com/
 				font-size:21px;
 				line-height:24px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Main-map_320-main_map_320 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -1132,7 +1132,7 @@ In Sri Lanka, Greece and <a href="https://www.ft.com/content/8c33eefc-f6c1-11e5-
 				font-size:21px;
 				line-height:24px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Dual_use_map_320-dual_use_map_320 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -1257,7 +1257,7 @@ In Sri Lanka, Greece and <a href="https://www.ft.com/content/8c33eefc-f6c1-11e5-
 				font-size:20px;
 				line-height:21px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Dual_use_map_560-dual_use_map_560 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -1376,7 +1376,7 @@ In Sri Lanka, Greece and <a href="https://www.ft.com/content/8c33eefc-f6c1-11e5-
 				font-size:20px;
 				line-height:21px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Dual_use_map_760-dual_use_map_760 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -1526,7 +1526,7 @@ Data compiled or commissioned by the Financial Times from third-party sources sh
 				font-size:21px;
 				line-height:24px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Top-10-port-operators-Top_10_port_operators_320 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -1566,7 +1566,7 @@ Data compiled or commissioned by the Financial Times from third-party sources sh
 				src='images/Top-10-port-operators-Top_10_port_operators_320.png'
 				/>
 			<div id='ig-ai0-1' class='ig-ai2html-settings ig-ai-abs' style='top:0.4034%;left:0.3389%;'>
-				<p class='ig-ai-pstyle0'><span style="color:#9f3451">China&rsquo;s port operators</span></p>
+				<p class='ig-ai-pstyle0'>China&rsquo;s port operators</p>
 				<p class='ig-ai-pstyle0'>take up strong positions</p>
 			</div>
 			<div id='ig-ai0-2' class='ig-ai2html-settings ig-ai-abs' style='top:11.4958%;left:0.3389%;'>
@@ -1657,7 +1657,7 @@ Data compiled or commissioned by the Financial Times from third-party sources sh
 				font-size:18px;
 				line-height:20px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Top-10-port-operators-Top_10_port_operators_560 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -1697,7 +1697,7 @@ Data compiled or commissioned by the Financial Times from third-party sources sh
 				src='images/Top-10-port-operators-Top_10_port_operators_560.png'
 				/>
 			<div id='ig-ai1-1' class='ig-ai2html-settings ig-ai-abs' style='top:1.3964%;left:0.4436%;'>
-				<p class='ig-ai-pstyle0'><span style="color:#9f3451">China&rsquo;s port operators</span> take up strong positions</p>
+				<p class='ig-ai-pstyle0'>China&rsquo;s port operators take up strong positions</p>
 			</div>
 			<div id='ig-ai1-2' class='ig-ai2html-settings ig-ai-abs' style='top:6.1091%;left:0.4436%;'>
 				<p class='ig-ai-pstyle1'>2015, twenty-foot equivalent units (million)</p>
@@ -1787,7 +1787,7 @@ Data compiled or commissioned by the Financial Times from third-party sources sh
 				font-size:20px;
 				line-height:22px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Top-10-port-operators-Top_10_port_operators_760 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -1823,7 +1823,7 @@ Data compiled or commissioned by the Financial Times from third-party sources sh
 				src='images/Top-10-port-operators-Top_10_port_operators_760.png'
 				/>
 			<div id='ig-ai2-1' class='ig-ai2html-settings ig-ai-abs' style='top:1.0473%;left:0.1316%;'>
-				<p class='ig-ai-pstyle0'><span style="color:#9f3451">China&rsquo;s port operators</span> take up strong positions</p>
+				<p class='ig-ai-pstyle0'>China&rsquo;s port operators take up strong positions</p>
 			</div>
 			<div id='ig-ai2-2' class='ig-ai2html-settings ig-ai-abs' style='top:5.9345%;left:0.1316%;'>
 				<p class='ig-ai-pstyle1'>2015, twenty-foot equivalent units (million)</p>
@@ -1933,7 +1933,7 @@ Beijing’s shipping lines deliver more containers than carriers from any other 
 				font-size:21px;
 				line-height:24px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Top-20-carriers-Top_20_carrier_320 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -1973,7 +1973,7 @@ Beijing’s shipping lines deliver more containers than carriers from any other 
 				src='images/Top-20-carriers-Top_20_carrier_320.png'
 				/>
 			<div id='ig-ai0-1' class='ig-ai2html-settings ig-ai-abs' style='top:0.2078%;left:0.3391%;'>
-				<p class='ig-ai-pstyle0'><span style="color:#9f3451">China&rsquo;s shipping lines</span> eclipse</p>
+				<p class='ig-ai-pstyle0'>China&rsquo;s shipping lines eclipse</p>
 				<p class='ig-ai-pstyle0'>those from other countries</p>
 			</div>
 			<div id='ig-ai0-2' class='ig-ai2html-settings ig-ai-abs' style='top:12.2601%;left:0.3391%;'>
@@ -2082,7 +2082,7 @@ Beijing’s shipping lines deliver more containers than carriers from any other 
 				font-size:18px;
 				line-height:20px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Top-20-carriers-Top_20_carrier_560 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -2122,7 +2122,7 @@ Beijing’s shipping lines deliver more containers than carriers from any other 
 				src='images/Top-20-carriers-Top_20_carrier_560.png'
 				/>
 			<div id='ig-ai1-1' class='ig-ai2html-settings ig-ai-abs' style='top:0.1753%;left:0.3571%;'>
-				<p class='ig-ai-pstyle0'><span style="color:#9f3451">China&rsquo;s shipping lines</span> eclipse those from other countries</p>
+				<p class='ig-ai-pstyle0'>China&rsquo;s shipping lines eclipse those from other countries</p>
 			</div>
 			<div id='ig-ai1-2' class='ig-ai2html-settings ig-ai-abs' style='top:6.4854%;left:0.3571%;'>
 				<p class='ig-ai-pstyle1'>2015, twenty-foot equivalent units (million)</p>
@@ -2230,7 +2230,7 @@ Beijing’s shipping lines deliver more containers than carriers from any other 
 				font-size:20px;
 				line-height:22px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Top-20-carriers-Top_20_carrier_760 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -2270,7 +2270,7 @@ Beijing’s shipping lines deliver more containers than carriers from any other 
 				src='images/Top-20-carriers-Top_20_carrier_760.png'
 				/>
 			<div id='ig-ai2-1' class='ig-ai2html-settings ig-ai-abs' style='top:0.6938%;left:0.1316%;'>
-				<p class='ig-ai-pstyle0'><span style="color:#9f3451">China&rsquo;s shipping lines</span> eclipse those from other countries</p>
+				<p class='ig-ai-pstyle0'>China&rsquo;s shipping lines eclipse those from other countries</p>
 			</div>
 			<div id='ig-ai2-2' class='ig-ai2html-settings ig-ai-abs' style='top:7.1118%;left:0.1316%;'>
 				<p class='ig-ai-pstyle1'>2015, twenty-foot equivalent units (million)</p>
@@ -2398,7 +2398,7 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				font-size:21px;
 				line-height:24px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -2687,7 +2687,7 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				font-size:18px;
 				line-height:20px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Top-50-ports-Top_50_port_560 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -3016,7 +3016,7 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				font-size:20px;
 				line-height:27px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Top-50-ports-Top_50_port_760 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -3353,7 +3353,7 @@ And those ports handled 67 per cent of global container volumes, up from 42 per 
 				font-size:21px;
 				line-height:24px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Ports-traffic-port-traffic-320 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -3394,7 +3394,7 @@ And those ports handled 67 per cent of global container volumes, up from 42 per 
 				/>
 			<div id='ig-ai0-1' class='ig-ai2html-settings ig-ai-abs' style='top:0.6574%;left:0.3820%;'>
 				<p class='ig-ai-pstyle0'>Two-thirds of global container</p>
-				<p class='ig-ai-pstyle0'>traffic passes through <span style="color:#9f3451">Chinese</span></p>
+				<p class='ig-ai-pstyle0'>traffic passes through Chinese</p>
 				<p class='ig-ai-pstyle0'><span style="color:#9f3451">owned or invested ports</span></p>
 			</div>
 			<div id='ig-ai0-2' class='ig-ai2html-settings ig-ai-abs' style='top:19.5033%;left:0.3820%;'>
@@ -3465,7 +3465,7 @@ And those ports handled 67 per cent of global container volumes, up from 42 per 
 				font-size:18px;
 				line-height:20px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Ports-traffic-port-traffic-560 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -3506,7 +3506,7 @@ And those ports handled 67 per cent of global container volumes, up from 42 per 
 				/>
 			<div id='ig-ai1-1' class='ig-ai2html-settings ig-ai-abs' style='top:1.3976%;left:0.9401%;'>
 				<p class='ig-ai-pstyle0'>Two-thirds of container traffic passes</p>
-				<p class='ig-ai-pstyle0'>through <span style="color:#9f3451">Chinese owned or invested ports</span></p>
+				<p class='ig-ai-pstyle0'>through Chinese owned or invested ports</p>
 			</div>
 			<div id='ig-ai1-2' class='ig-ai2html-settings ig-ai-abs' style='top:15.3738%;left:0.9401%;'>
 				<p class='ig-ai-pstyle1'>Twenty-foot equivalent units (million) and percentage of total for world's top 50 container ports</p>
@@ -3575,7 +3575,7 @@ And those ports handled 67 per cent of global container volumes, up from 42 per 
 				font-size:20px;
 				line-height:22px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Ports-traffic-port-traffic-760 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -3612,7 +3612,7 @@ And those ports handled 67 per cent of global container volumes, up from 42 per 
 				src='images/Ports-traffic-port-traffic-760.png'
 				/>
 			<div id='ig-ai2-1' class='ig-ai2html-settings ig-ai-abs' style='top:1.4850%;left:0.1316%;'>
-				<p class='ig-ai-pstyle0'>Two-thirds of container traffic passes through <span style="color:#9f3451">Chinese owned or invested ports</span></p>
+				<p class='ig-ai-pstyle0'>Two-thirds of container traffic passes through Chinese owned or invested ports</p>
 			</div>
 			<div id='ig-ai2-2' class='ig-ai2html-settings ig-ai-abs' style='top:11.1377%;left:0.1316%;'>
 				<p class='ig-ai-pstyle1'>Twenty-foot equivalent units (million) and percentage of total for world's top 50 container ports</p>
@@ -3702,7 +3702,7 @@ The total size of these investments is difficult to calculate because of sketchy
 				font-size:21px;
 				line-height:24px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Investments-over-time-investments_over_time_320 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -3734,7 +3734,7 @@ The total size of these investments is difficult to calculate because of sketchy
 				src='images/Investments-over-time-investments_over_time_320.png'
 				/>
 			<div id='ig-ai0-1' class='ig-ai2html-settings ig-ai-abs' style='top:0.2944%;left:0.6779%;'>
-				<p class='ig-ai-pstyle0'><span style="color:#9f3451">Chinese investment</span> in foreign</p>
+				<p class='ig-ai-pstyle0'>Chinese investment in foreign</p>
 				<p class='ig-ai-pstyle0'>ports is speeding up</p>
 			</div>
 			<div id='ig-ai0-2' class='ig-ai2html-settings ig-ai-abs' style='top:8.5385%;left:0.6779%;'>
@@ -3854,7 +3854,7 @@ The total size of these investments is difficult to calculate because of sketchy
 				font-size:18px;
 				line-height:27px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Investments-over-time-investments_over_time_560 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -3886,7 +3886,7 @@ The total size of these investments is difficult to calculate because of sketchy
 				src='images/Investments-over-time-investments_over_time_560.png'
 				/>
 			<div id='ig-ai1-1' class='ig-ai2html-settings ig-ai-abs' style='top:-0.1318%;left:0.7317%;'>
-				<p class='ig-ai-pstyle0'><span style="color:#9f3451">Chinese investment</span> in foreign ports is speeding up</p>
+				<p class='ig-ai-pstyle0'>Chinese investment in foreign ports is speeding up</p>
 			</div>
 			<div id='ig-ai1-2' class='ig-ai2html-settings ig-ai-abs' style='top:4.6140%;left:0.7317%;'>
 				<p class='ig-ai-pstyle1'>Number by region</p>
@@ -4062,7 +4062,7 @@ The total size of these investments is difficult to calculate because of sketchy
 				font-size:20px;
 				line-height:27px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Investments-over-time-investments_over_time_760 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -4091,7 +4091,7 @@ The total size of these investments is difficult to calculate because of sketchy
 				src='images/Investments-over-time-investments_over_time_760.png'
 				/>
 			<div id='ig-ai2-1' class='ig-ai2html-settings ig-ai-abs' style='top:0.1391%;left:0.1316%;'>
-				<p class='ig-ai-pstyle0'><span style="color:#9f3451">Chinese investment</span> in foreign ports is speeding up</p>
+				<p class='ig-ai-pstyle0'>Chinese investment in foreign ports is speeding up</p>
 			</div>
 			<div id='ig-ai2-2' class='ig-ai2html-settings ig-ai-abs' style='top:5.1461%;left:0.1316%;'>
 				<p class='ig-ai-pstyle1'>Number by region</p>
@@ -4289,7 +4289,7 @@ For thousands of years, Chinese emperors focused on defending the “middle king
 				font-size:21px;
 				line-height:24px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-navy_size-Navy_size_320 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -4397,7 +4397,7 @@ For thousands of years, Chinese emperors focused on defending the “middle king
 				font-size:18px;
 				line-height:20px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-navy_size-Navy_size_560 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -4506,7 +4506,7 @@ For thousands of years, Chinese emperors focused on defending the “middle king
 				font-size:20px;
 				line-height:22px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-navy_size-Navy_size_760 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -4673,7 +4673,7 @@ Another focus is a string of artificial islands that Beijing has dredged out of 
 				font-size:21px;
 				line-height:24px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Defence-spending-defence_spending_320 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -4712,7 +4712,7 @@ Another focus is a string of artificial islands that Beijing has dredged out of 
 				src='images/Defence-spending-defence_spending_320.png'
 				/>
 			<div id='Title' class='ig-ai2html-settings ig-ai-abs' style='top:0.2295%;left:-0.0000%;'>
-				<p class='ig-ai-pstyle0'><span style="color:#9f3451">China&rsquo;s defence spending</span> has</p>
+				<p class='ig-ai-pstyle0'>China&rsquo;s defence spending has</p>
 				<p class='ig-ai-pstyle0'>increased dramatically since 2000</p>
 			</div>
 			<div id='Subtitle_1' class='ig-ai2html-settings ig-ai-abs' style='top:13.5376%;left:0.0076%;'>
@@ -4793,7 +4793,7 @@ Another focus is a string of artificial islands that Beijing has dredged out of 
 				font-size:18px;
 				line-height:20px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Defence-spending-defence_spending_560 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -4832,7 +4832,7 @@ Another focus is a string of artificial islands that Beijing has dredged out of 
 				src='images/Defence-spending-defence_spending_560.png'
 				/>
 			<div id='Title' class='ig-ai2html-settings ig-ai-abs' style='top:0.2482%;left:0.3571%;'>
-				<p class='ig-ai-pstyle0'><span style="color:#9f3451">China&rsquo;s defence spending</span> has increased dramatically since 2000</p>
+				<p class='ig-ai-pstyle0'>China&rsquo;s defence spending has increased dramatically since 2000</p>
 			</div>
 			<div id='Subtitle_1' class='ig-ai2html-settings ig-ai-abs' style='top:8.9338%;left:0.3612%;'>
 				<p class='ig-ai-pstyle1'>$bn (constant prices, 2014)</p>
@@ -4912,7 +4912,7 @@ Another focus is a string of artificial islands that Beijing has dredged out of 
 				font-size:20px;
 				line-height:22px;
 				font-weight:400;
-				color:#42413c;
+				color:#9f3451;
 			}
 			#ig-Defence-spending-defence_spending_760 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
@@ -4947,7 +4947,7 @@ Another focus is a string of artificial islands that Beijing has dredged out of 
 				src='images/Defence-spending-defence_spending_760.png'
 				/>
 			<div id='Title' class='ig-ai2html-settings ig-ai-abs' style='top:0.4875%;left:0.2517%;'>
-				<p class='ig-ai-pstyle0'><span style="color:#9f3451">China&rsquo;s defence spending</span> has increased dramatically since 2000</p>
+				<p class='ig-ai-pstyle0'>China&rsquo;s defence spending has increased dramatically since 2000</p>
 			</div>
 			<div id='Subtitle_1' class='ig-ai2html-settings ig-ai-abs' style='top:11.2129%;left:0.2547%;'>
 				<p class='ig-ai-pstyle1'>$bn (constant prices, 2014)</p>
