Final type tweaks

--- a/client/index.html
+++ b/client/index.html
@@ -1091,7 +1091,7 @@ Gwadar is part of a much bigger ambition, driven by <a href="https://www.ft.com/
 
 Investments into a vast network of harbours across the globe have made Chinese port operators the world leaders. Its shipping companies carry more cargo than those of any other nation — five of the top 10 container ports in the world are in mainland China with another in Hong Kong. Its coastguard has the globe’s largest maritime law enforcement fleet, its navy is the world’s fastest growing among major powers and its fishing armada numbers some 200,000 seagoing vessels.
 
-The emergence of China as a maritime superpower is set to challenge a US command of the seas that has underwritten a crucial element of <a href="https://www.ft.com/content/ae092214-d36f-11e6-b06b-680c49b4b4c0">Pax Americana</a>, the relative period of peace enjoyed in the west since the second world war. As US President-elect Donald Trump prepares to take power, strategic tensions between China and the US are already evident in the <a href="https://www.ft.com/content/ad3e1728-c4fa-11e6-8f29-9445cac8966f">South China Sea</a>, where Beijing has pledged to enforce its claim to disputed islands and atolls, and over Mr Trump’s warm overtures toward <a href="https://www.ft.com/content/47844b5a-cc07-11e6-b8ce-b9c03770f8b1">Taiwan</a>, which China regards as a breakaway province.
+The emergence of China as a maritime superpower is set to challenge a US command of the seas that has underwritten a crucial element of <a href="https://www.ft.com/content/ae092214-d36f-11e6-b06b-680c49b4b4c0">Pax Americana</a>, the relative period of peace enjoyed in the west since the second world war. As US President-elect Donald Trump prepares to take power, strategic tensions between China and the US are already evident in the <a href="https://www.ft.com/content/ad3e1728-c4fa-11e6-8f29-9445cac8966f">South China Sea</a>, where Beijing has pledged to enforce its claim to disputed islands and atolls. Rex Tillerson, the Trump nominee for US secretary of state, said on Wednesday that Washington should block Beijing's access to the islands. Relations were also dented over Mr Trump’s warm overtures toward <a href="https://www.ft.com/content/47844b5a-cc07-11e6-b8ce-b9c03770f8b1">Taiwan</a>, which China regards as a breakaway province.
 
 China understands maritime influence in the same way as Alfred Thayer Mahan, the 19th century American strategist. “Control of the sea,” Mr Mahan wrote, “by maritime commerce and naval supremacy, means predominant influence in the world; because, however great the wealth of the land, nothing facilitates the necessary exchanges as does the sea.”
 
@@ -1897,7 +1897,7 @@ Data compiled or commissioned by the Financial Times from third-party sources sh
 
 <!-- Top 10 port operators end -->
 
-Beijing’s shipping lines deliver more containers than carriers from any other country, according to data from Drewry, the shipping consultancy. The five big Chinese carriers together controlled 18 per cent of global container shipping in 2015, significantly higher than the next country, Denmark, the home nation of Maersk Line, the world’s biggest container shipping group, Drewry’s statistics show.
+Beijing’s shipping lines deliver more containers than those from any other country, according to data from Drewry, the shipping consultancy. The five big Chinese carriers together controlled 18 per cent of global container shipping in 2015, significantly higher than the next country, Denmark, the home nation of Maersk Line, the world’s biggest container shipping group.
 
 <!-- Top 20 carriers start -->
 
@@ -3666,7 +3666,7 @@ And those ports handled 67 per cent of global container volumes, up from 42 per 
 
 It is not only the world’s biggest ports that have attracted Chinese investments. Dozens of smaller harbours — including some in key strategic locations such as Djibouti, Hambantota in Sri Lanka, Darwin in Australia, Maday Island in Myanmar and proposed ports on the Atlantic Ocean islands of São Tomé and Príncipe and in Walvis Bay in Namibia — have also drawn investments or promises of Chinese port construction.
 
-The total size of these investments is difficult to calculate because of sketchy disclosure. But since 2010, Chinese companies have completed or announced deals involving at least 40 port deals worth a total of about $45.6bn, according to a study by Sam Beatson and Jim Coke at the Lau China Institute, King’s College London, in co-operation with the Financial Times. A dozen other deals — from Carey Island, Malaysia to Chongjin in North Korea — have been reported without any financial details.
+The total size of these investments is difficult to calculate because of sketchy disclosure. But since 2010, Chinese and Hong Kong companies have completed or announced deals involving at least 40 port projects worth a total of about $45.6bn, according to a study by Sam Beatson and Jim Coke at the Lau China Institute, King’s College London, in co-operation with the Financial Times. A dozen other deals — from Carey Island, Malaysia, to Chongjin in North Korea — have been reported without any financial details.
 
 <!--  Investments over time start -->
 
@@ -4245,9 +4245,9 @@ The total size of these investments is difficult to calculate because of sketchy
 
 <!--  Investments over time ends -->
 
-Rounding out a picture of China’s merchant fleet dominance is the country’s fishing fleet, which is by far the largest in the world, according to a recent paper by Michael McDevitt, a former rear admiral in the US navy and now a senior fellow at CNA Strategic Studies, a think-tank.
+Rounding out a picture of China’s merchant fleet dominance is the country’s fishing fleet, which is by far the largest in the world, according to a recent paper by Michael McDevitt, a former rear admiral in the US navy and now a senior fellow at CNA Strategic Studies, a US think-tank.
 
-“In the Chinese context, maritime power encompasses more than naval power,” wrote Mr McDevitt. “The maritime power equation includes a large and effective coast guard, a world-class merchant marine and fishing fleet, a globally recognised shipbuilding capacity and an ability to harvest or extract economically important maritime resources, especially fish.”
+“In the Chinese context, maritime power encompasses more than naval power,” wrote Mr McDevitt. “The maritime power equation includes a large and effective coastguard, a world-class merchant marine and fishing fleet, a globally recognised shipbuilding capacity and an ability to harvest or extract economically important maritime resources, especially fish.”
 
 <h2 class="o-typography-subhead">Journey from land to sea</h2>
 
@@ -5057,7 +5057,7 @@ Another focus is the string of artificial islands that Beijing has dredged out o
 
 <!-- Defence spending end -->
 
-Although Beijing plays down such sweeping strategic objectives, the imperative to step up naval security is regularly emphasised in Chinese circles. A 2015 paper in a semi-official journal under the powerful Chinese Academy of Sciences, went one step further, calling for China to “make full use of diplomatic and economic methods to establish at strategic maritime locations points for resupply and military bases so as to protect strategic maritime passages”.
+Although Beijing plays down such sweeping strategic objectives, the imperative to step up naval security is regularly emphasised in Chinese circles. A 2015 paper in a semi-official journal under the powerful Chinese Academy of Sciences went one step further, calling for China to “make full use of diplomatic and economic methods to establish at strategic maritime locations points for resupply and military bases so as to protect strategic maritime passages”.
 
 <figure class="graphic graphicWidth">
   <img alt="" src="images/sub.jpg"></img>
@@ -5066,7 +5066,7 @@ Although Beijing plays down such sweeping strategic objectives, the imperative t
   </figcaption>
 </figure>
 
-Reality is unfolding in line with the academics’ recommendations. The political justification often used for port investments is “<a href="https://ig.ft.com/sites/special-reports/one-belt-one-road/">One Belt One Road</a>”, a grand design advocated by President Xi to revive the ancient Silk Road trading routes and boost investment and commerce in more than 60 countries in Asia, the Middle East, Africa and Europe.
+Reality is unfolding in line with the academics’ recommendations. The political justification often used for port investments is “<a href="https://ig.ft.com/sites/special-reports/one-belt-one-road/">One Belt One Road</a>”, a grand design advocated by Mr Xi to revive the ancient Silk Road trading routes and boost investment and commerce in more than 60 countries in Asia, the Middle East, Africa and Europe.
 
 Gwadar port, for example, is described as the core element in a $54bn China-Pakistan Economic Corridor. At its inception, Chinese involvement in the port was limited to financing and construction, but in 2015 Islamabad handed over ownership to the state-owned China Overseas Port Holding Company on a lease until 2059.
 
@@ -5083,7 +5083,7 @@ At the time, China claimed the project was purely commercial. Hong Lei, a spokes
 
 <h2 class="o-typography-subhead">Beijing calls in a debt</h2>
 
-To the west of Gwadar at Djibouti — on the Horn of Africa’s maritime choke point — a similar story has unfolded. China’s initial embrace seemed purely commercial, with the state-owned China Merchants Group taking a stake in the Port of Djibouti’s container terminal in 2012 and paving the way for a $9bn investment including the construction of a liquefied natural gas terminal, a wharf for livestock and a trade logistics park.
+To the west of Gwadar at Djibouti — on the Horn of Africa’s maritime chokepoint — a similar story has unfolded. China’s initial embrace seemed purely commercial, with the state-owned China Merchants Group taking a stake in the Port of Djibouti’s container terminal in 2012 and paving the way for a $9bn investment including the construction of a liquefied natural gas terminal, a wharf for livestock and a trade logistics park.
 
 But in 2016, Beijing acknowledged that its plans for Djibouti had an additional dimension — the construction of the <a href="https://www.ft.com/content/59ad20d6-f74b-11e5-803c-d27c7117d132">country’s first overseas naval base</a>, ensuring that China’s military presence will remain in the Gulf region until at least 2026 with a contingent of up to 10,000 personnel. Even now, though, Beijing’s official media calls the base a “logistics centre”.
 
@@ -5098,17 +5098,17 @@ The financial firepower at China’s disposal can make its entreaties irresistib
 
 “That was clear testimony as to how an economic project acquires a military dimension for China,” says Brahma Chellaney, professor of Strategic Studies at New Delhi’s Centre for Policy Research. “The progression is quite rapid.”
 
-Following President Sirisena’s intervention, Beijing piled diplomatic pressure on Sri Lanka, using as leverage the huge debts that Colombo had built up with Chinese state banks. Last July, China’s foreign minister, Wang Yi, arrived with an uncompromising message, according to a Sri Lankan government official who declined to be identified.
+Following Mr Sirisena’s intervention, Beijing piled diplomatic pressure on Sri Lanka, using as leverage the huge debts that Colombo had built up with Chinese state banks. Last July, China’s foreign minister, Wang Yi, arrived with an uncompromising message, according to a Sri Lankan government official who declined to be identified.
 
 “He was reading the riot act,” says the Sri Lankan official. “Unless the government pulled all their fingers out, and got the project back on stream, China would abandon Sri Lanka altogether.”
 
 Sri Lanka, which has debts of close to $10bn with Beijing, duly complied. A month later, the government signed an agreement with the China Harbour Engineering Company, <a href="https://www.ft.com/content/9c70e5f4-4488-11e5-b3b2-1672f710807b">paving the way for the resumption of work</a> on the project after a break of nearly 18 months.
 
-In a related deal a Chinese company agreed to pay $1bn for a controlling stake in the new port of Hambantota on the country’s south coast, giving Beijing another modern harbour on the Indian Ocean. Hambantota had been built by a Chinese construction company with Chinese loans.
+In a related deal a Chinese company agreed to pay $1bn for a controlling stake in the new port at Hambantota on the country’s south coast, giving Beijing another modern harbour on the Indian Ocean. Hambantota had been built by a Chinese construction company with Chinese loans.
 
-Other parts of the Indian Ocean also loom large in Beijing’s ambition to rule the seas. Under a bilateral military agreement, Chinese naval vessels use ports in the Seychelles as hubs from which they conduct anti-piracy patrols. In the Maldives, a visit by Mr Xi in 2014 officially inducted the tiny string of atolls with a population of 350,000 people into the One Belt programme, along with promises of infrastructure investments.
+Other parts of the Indian Ocean also loom large in Beijing’s ambition to rule the seas. Under a bilateral military agreement, Chinese naval vessels use ports in the Seychelles as hubs from which they conduct anti-piracy patrols. In the Maldives, a visit by Mr Xi in 2014 officially inducted the tiny string of atolls with a population of 350,000 people into the One Belt programme, with promises of infrastructure investments.
 
-In Greece too, China’s acquisition of a controlling stake in Piraeus, one of Europe’s largest ports, signalled a merging of commercial and strategic agendas. As Alexis Tsipras, the country’s prime minister, hosted a Chinese warship and naval top brass in Piraeus in early 2015, Chinese state media quoted him as saying he supported its sale to Chinese interests. Less than a year later, it was sold for $420m.
+In Greece too, China’s acquisition of a controlling stake in Piraeus, one of Europe’s largest ports, signalled a merging of commercial and strategic agendas. When Alexis Tsipras, the country’s prime minister, hosted a Chinese warship and naval top brass in Piraeus in early 2015, Chinese state media quoted him as saying he supported its sale to Chinese interests. Less than a year later, it was sold for $420m.
 
 Chinese officials relished the moment. They recalled how Beijing was embarrassed in 2011 when it needed to evacuate 36,000 Chinese workers from Libya as violence broke out, forcing it at short notice to enlist the help of Greek merchant ships to make the first few rescue missions.
 
@@ -5116,7 +5116,7 @@ Chinese officials relished the moment. They recalled how Beijing was embarrassed
 
 <p>
 	<em>
-Additional reporting by Charles Clover in Beijing.
+Additional reporting by Charles Clover in Beijing
 	</em>
 </p>
 
