--- a/client/index.html
+++ b/client/index.html
@@ -1082,7 +1082,7 @@ Gwadar is part of a much bigger ambition, driven by <a href="https://www.ft.com/
 
 <div class=''  data-o-grid-colspan="hide S12 Scenter">
 <figure class="graphic graphicWidth">
-  <img alt="" src="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2Fgwadar2.jpg?source=url-builder"></img>
+  <img alt="A Pakistani naval guard at Gwadar port image" src="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2Fgwadar2.jpg?source=url-builder"></img>
     <figcaption class="o-typography-caption">
     A Pakistani naval guard at Gwadar port which was financed, built and is now owned by China © Aamir Qureshi/AFP/Getty Images
   </figcaption>
@@ -5060,7 +5060,7 @@ Another focus is the string of artificial islands that Beijing has dredged out o
 Although Beijing plays down such sweeping strategic objectives, the imperative to step up naval security is regularly emphasised in Chinese circles. A 2015 paper in a semi-official journal under the powerful Chinese Academy of Sciences went one step further, calling for China to “make full use of diplomatic and economic methods to establish at strategic maritime locations points for resupply and military bases so as to protect strategic maritime passages”.
 
 <figure class="graphic graphicWidth">
-  <img alt="" src="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2Fsub.jpg?source=url-builder"></img>
+  <img alt="A Chinese navy submarine image" src="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2Fsub.jpg?source=url-builder"></img>
     <figcaption class="o-typography-caption">
     Chinese navy submarine off Qingdao in Shandong Province © Guang Niu/AFP/Getty Images
   </figcaption>
@@ -5072,7 +5072,7 @@ Gwadar port, for example, is described as the core element in a $54bn China-Paki
 
 <div class=''  data-o-grid-colspan="12 center Shide">
 <figure class="graphic graphicWidth">
-  <img alt="" src="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2Fgwadar2.jpg?source=url-builder"></img>
+  <img alt="A Pakistani naval guard at Gwadar port image" src="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2Fgwadar2.jpg?source=url-builder"></img>
     <figcaption class="o-typography-caption">
     A Pakistani naval guard at Gwadar port which was financed, built and is now owned by China © Aamir Qureshi/AFP/Getty Images
   </figcaption>
@@ -5090,7 +5090,7 @@ But in 2016, Beijing acknowledged that its plans for Djibouti had an additional 
 The financial firepower at China’s disposal can make its entreaties irresistible. In Sri Lanka, President Maithripala Sirisena suspended a $1.4bn “port city” project being built by Chinese companies at Colombo shortly after he took power in 2015. Mr Sirisena was wary over China’s growing influence, as dramatised by two unannounced visits from a PLAN submarine and warship to a Colombo container terminal owned by a Chinese state company in late 2014.
 
 <figure class="graphic graphicWidth">
-  <img alt="" src="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2FsriLanka.jpg?source=url-builder"></img>
+  <img alt="Xi Jinping, China's president, and former Sri Lankan leader Mahinda Rajapaksa image" src="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2FsriLanka.jpg?source=url-builder"></img>
     <figcaption class="o-typography-caption">
     Xi Jinping, China's president, and former Sri Lankan leader Mahinda Rajapaksa at the the Chinese-funded Colombo “port city” project in 2014 © Lakruwan Wanniarachchi/AFP/Getty Images
   </figcaption>
