--- a/client/index.html
+++ b/client/index.html
@@ -748,7 +748,7 @@
 				<p class='ig-ai-pstyle4'>OCEAN</p>
 			</div>
 			<div id='ig-ai0-11' class='ig-key ig-ai-abs' style='top:46.2230%;left:2.5042%;'>
-				<p class='ig-ai-pstyle5'>China&rsquo;s global port</p>
+				<p class='ig-ai-pstyle5'>China s global port</p>
 				<p class='ig-ai-pstyle5'>ownership clusters</p>
 				<p class='ig-ai-pstyle5'>around key trade routes</p>
 				<p class='ig-ai-pstyle5'>and maritime chokepoints</p>
@@ -1099,7 +1099,7 @@ China understands maritime influence in the same way as Alfred Thayer Mahan, the
 
 The Gwadar template, where Beijing used its commercial know-how and financial muscle to secure ownership over a strategic trading base, only to enlist it later into military service, has been replicated in other key locations.
 
-In Sri Lanka, Greece and <a href="https://www.ft.com/content/8c33eefc-f6c1-11e5-803c-d27c7117d132">Djibouti</a> in the Horn of Africa, Chinese investment in civilian ports has been followed by deployments of People’s Liberation Army Navy vessels and in some cases announcements of longer term <a href="https://www.ft.com/content/810b4510-6ea4-11e6-9ac1-1055824ca907">military contingencies</a>.
+In Sri Lanka, Greece and <a href="https://www.ft.com/content/8c33eefc-f6c1-11e5-803c-d27c7117d132">Djibouti</a> in the Horn of Africa, Chinese investment in civilian ports has been followed by deployments or visits of People’s Liberation Army Navy vessels and in some cases announcements of longer term <a href="https://www.ft.com/content/810b4510-6ea4-11e6-9ac1-1055824ca907">military contingencies</a>.
 
 <!--  Dual use map starts -->
 
@@ -1897,7 +1897,7 @@ Data compiled or commissioned by the Financial Times from third-party sources sh
 
 <!-- Top 10 port operators end -->
 
-Beijing’s shipping lines deliver more containers than those from any other country, according to data from Drewry, the shipping consultancy. The five big Chinese carriers together controlled 18 per cent of global container shipping in 2015, significantly higher than the next country, Denmark, the home nation of Maersk Line, the world’s biggest container shipping group.
+Beijing’s shipping lines deliver more containers than those from any other country, according to data from Drewry, the shipping consultancy. The five big Chinese carriers together controlled 18 per cent of all container shipping handled by the world's top 20 companies in 2015, higher than the next country, Denmark, the home nation of Maersk Line, the world’s biggest container shipping group.
 
 <!-- Top 20 carriers start -->
 
@@ -5102,7 +5102,7 @@ Following Mr Sirisena’s intervention, Beijing piled diplomatic pressure on Sri
 
 “He was reading the riot act,” says the Sri Lankan official. “Unless the government pulled all their fingers out, and got the project back on stream, China would abandon Sri Lanka altogether.”
 
-Sri Lanka, which has debts of close to $10bn with Beijing, duly complied. A month later, the government signed an agreement with the China Harbour Engineering Company, <a href="https://www.ft.com/content/9c70e5f4-4488-11e5-b3b2-1672f710807b">paving the way for the resumption of work</a> on the project after a break of nearly 18 months.
+Sri Lanka, which has debts of around $8bn with Beijing, duly complied. A month later, the government signed an agreement with the China Harbour Engineering Company, <a href="https://www.ft.com/content/9c70e5f4-4488-11e5-b3b2-1672f710807b">paving the way for the resumption of work</a> on the project after a break of nearly 18 months.
 
 In a related deal a Chinese company agreed to pay $1bn for a controlling stake in the new port at Hambantota on the country’s south coast, giving Beijing another modern harbour on the Indian Ocean. Hambantota had been built by a Chinese construction company with Chinese loans.
 
