--- a/client/index.html
+++ b/client/index.html
@@ -748,7 +748,7 @@
 				<p class='ig-ai-pstyle4'>OCEAN</p>
 			</div>
 			<div id='ig-ai0-11' class='ig-key ig-ai-abs' style='top:46.2230%;left:2.5042%;'>
-				<p class='ig-ai-pstyle5'>China s global port</p>
+				<p class='ig-ai-pstyle5'>China&rsquo;s global port</p>
 				<p class='ig-ai-pstyle5'>ownership clusters</p>
 				<p class='ig-ai-pstyle5'>around key trade routes</p>
 				<p class='ig-ai-pstyle5'>and maritime chokepoints</p>
@@ -4637,7 +4637,7 @@ For thousands of years, Chinese emperors focused on defending the middle kingdom
 
 Analysts say that China’s naval strategy is aimed primarily at denying US aircraft carrier battle groups access to a string of archipelagos from Russia’s peninsula of Kamchatka to the Malay Peninsula in the south, a natural maritime barrier called the “first island chain” within which China identifies its strategic sphere of influence.
 
-Another focus is the string of artificial islands that Beijing has dredged out of coral reefs and rocks to help reinforce China’s claim to most of the South China Sea, putting it on a collision course with neighbours from Vietnam to the Philippines, as well as the US. The artificial islands have been equipped with landing strips and a US think-tank recently said, after analysis of satellite images, that Beijing appeared to have installed anti-aircraft guns, anti-missile systems and radar facilities on them.
+Another focus is the string of artificial islands that Beijing has dredged out of coral reefs and rocks to help reinforce China’s claim to most of the South China Sea, putting it on a collision course with neighbours from Vietnam to the Philippines, as well as the US. The artificial islands have been equipped with landing strips and a <a href="https://amti.csis.org/chinas-new-spratly-island-defenses/">US think-tank recently said</a>, after analysis of satellite images, that Beijing appeared to have installed anti-aircraft guns, anti-missile systems and radar facilities on them.
 
 <!-- Defence spending start -->
 
