Updated 50 ports colours

--- a/client/index.html
+++ b/client/index.html
@@ -2370,9 +2370,9 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 <div class="o-grid-row">
 
 <!-- 320 MOBILE -->
-<div id='ig-Top-50-ports-Top_50_port_320' class='' class='' data-o-grid-colspan="12 center Shide">
+<div id='ig-Top-50-portsv2-Top_50_port_320' class='' data-o-grid-colspan="12 center Shide">
 		<style type='text/css' media='screen,print'>
-			#ig-Top-50-ports-Top_50_port_320{
+			#ig-Top-50-portsv2-Top_50_port_320{
 				position:relative;
 				overflow:hidden;
 			}
@@ -2383,55 +2383,55 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				display:block;
 				width:100% !important;
 			}
-			#ig-Top-50-ports-Top_50_port_320 p{
+			#ig-Top-50-portsv2-Top_50_port_320 p{
 				font-family:MetricWeb,arial,helvetica,sans-serif;
 				font-size:13px;
 				line-height:18px;
 				margin:0;
 			}
-			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle0 {
+			#ig-Top-50-portsv2-Top_50_port_320 .ig-ai-pstyle0 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:21px;
 				line-height:24px;
 				font-weight:400;
 				color:#9f3451;
 			}
-			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle1 {
+			#ig-Top-50-portsv2-Top_50_port_320 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:14px;
 				line-height:16px;
 				font-weight:400;
 				color:#42413c;
 			}
-			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle2 {
+			#ig-Top-50-portsv2-Top_50_port_320 .ig-ai-pstyle2 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:14px;
 				line-height:16px;
 				font-weight:600;
 				color:#e8acab;
 			}
-			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle3 {
+			#ig-Top-50-portsv2-Top_50_port_320 .ig-ai-pstyle3 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:14px;
 				line-height:16px;
 				font-weight:600;
 				color:#9f3451;
 			}
-			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle4 {
+			#ig-Top-50-portsv2-Top_50_port_320 .ig-ai-pstyle4 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:14px;
 				line-height:16px;
 				font-weight:600;
-				color:#d66f69;
+				color:#8eb6c1;
 			}
-			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle5 {
+			#ig-Top-50-portsv2-Top_50_port_320 .ig-ai-pstyle5 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:14px;
 				line-height:13px;
 				font-weight:400;
 				color:#a7a59a;
 			}
-			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle6 {
+			#ig-Top-50-portsv2-Top_50_port_320 .ig-ai-pstyle6 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:14px;
 				line-height:15px;
@@ -2439,7 +2439,7 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				text-align:center;
 				color:#4c4d49;
 			}
-			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle7 {
+			#ig-Top-50-portsv2-Top_50_port_320 .ig-ai-pstyle7 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:14px;
 				line-height:13px;
@@ -2447,7 +2447,7 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				text-align:center;
 				color:#4c4d49;
 			}
-			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle8 {
+			#ig-Top-50-portsv2-Top_50_port_320 .ig-ai-pstyle8 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:14px;
 				line-height:15px;
@@ -2455,21 +2455,21 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				text-align:right;
 				color:#4c4d49;
 			}
-			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle9 {
+			#ig-Top-50-portsv2-Top_50_port_320 .ig-ai-pstyle9 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:14px;
 				line-height:13px;
 				font-weight:600;
 				color:#e8acab;
 			}
-			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle10 {
+			#ig-Top-50-portsv2-Top_50_port_320 .ig-ai-pstyle10 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:14px;
 				line-height:13px;
 				font-weight:600;
 				color:#9f3451;
 			}
-			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle11 {
+			#ig-Top-50-portsv2-Top_50_port_320 .ig-ai-pstyle11 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:14px;
 				line-height:16px;
@@ -2477,26 +2477,26 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				text-align:center;
 				color:#42413c;
 			}
-			#ig-Top-50-ports-Top_50_port_320 .ig-ai-pstyle12 {
+			#ig-Top-50-portsv2-Top_50_port_320 .ig-ai-pstyle12 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:14px;
 				line-height:13px;
 				font-weight:600;
-				color:#d66f69;
+				color:#8eb6c1;
 			}
 		</style>
-		<div id='ig-Top-50-ports-Top_50_port_320-graphic' style='position:relative'>
+		<div id='ig-Top-50-portsv2-Top_50_port_320-graphic' style='position:relative'>
 			<img id='ig-ai1-0'
 				class='ig-ai-img'
 				src='https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2FTop-50-ports-Top_50_port_320.png?source=url-builder'
 				/>
 			<div id='ig-ai1-1' class='ig-Layer_2 ig-ai-abs' style='top:0.3871%;left:-0.0000%;'>
-				<p class='ig-ai-pstyle0'>China&rsquo;s booming investment in</p>
-				<p class='ig-ai-pstyle0'>the world&rsquo;s largest ports</p>
+				<p class='ig-ai-pstyle0'>Chinese investment in the world&rsquo;s</p>
+				<p class='ig-ai-pstyle0'>largest ports has boomed</p>
 			</div>
 			<div id='ig-ai1-2' class='ig-Layer_2 ig-ai-abs' style='top:7.8712%;left:0.0001%;'>
 				<p class='ig-ai-pstyle1'>Top 30 container ports ranked by container</p>
-				<p class='ig-ai-pstyle1'>trafﬁc volume (twenty-foot equivalent units)</p>
+				<p class='ig-ai-pstyle1'>trafﬁc volume (twenty-foot equivalent unit)</p>
 			</div>
 			<div id='ig-ai1-3' class='ig-Layer_2 ig-ai-abs' style='top:13.2906%;left:51.3352%;'>
 				<p class='ig-ai-pstyle2'>Chinese invested</p>
@@ -2515,7 +2515,7 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 			<div id='ig-ai1-7' class='ig-Layer_2 ig-ai-abs' style='top:21.6779%;left:7.2674%;'>
 				<p class='ig-ai-pstyle5'>No Chinese investment</p>
 			</div>
-			<div id='ig-ai1-8' class='ig-Layer_2 ig-ai-abs' style='top:24.9038%;left:9.0210%;width:18.3564%;margin-left:-9.1782%;'>
+			<div id='ig-ai1-8' class='ig-Layer_2 ig-ai-abs' style='top:24.9038%;left:9.0211%;width:18.3567%;margin-left:-9.1784%;'>
 				<p class='ig-ai-pstyle6'>Rank</p>
 			</div>
 			<div id='ig-ai1-9' class='ig-Layer_2 ig-ai-abs' style='top:27.0974%;left:9.0209%;width:19.7418%;margin-left:-9.8709%;'>
@@ -2659,9 +2659,9 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 	</div>
 
 <!-- 560 -->
-<div id='ig-Top-50-ports-Top_50_port_560' class='' data-o-grid-colspan="hide S12 Scenter Mhide">
+<div id='ig-Top-50-portsv2-Top_50_port_560' class='' data-o-grid-colspan="hide S12 Scenter Mhide">
 		<style type='text/css' media='screen,print'>
-			#ig-Top-50-ports-Top_50_port_560{
+			#ig-Top-50-portsv2-Top_50_port_560{
 				position:relative;
 				overflow:hidden;
 			}
@@ -2672,55 +2672,55 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				display:block;
 				width:100% !important;
 			}
-			#ig-Top-50-ports-Top_50_port_560 p{
+			#ig-Top-50-portsv2-Top_50_port_560 p{
 				font-family:MetricWeb,arial,helvetica,sans-serif;
 				font-size:13px;
 				line-height:18px;
 				margin:0;
 			}
-			#ig-Top-50-ports-Top_50_port_560 .ig-ai-pstyle0 {
+			#ig-Top-50-portsv2-Top_50_port_560 .ig-ai-pstyle0 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:18px;
 				line-height:20px;
 				font-weight:400;
 				color:#9f3451;
 			}
-			#ig-Top-50-ports-Top_50_port_560 .ig-ai-pstyle1 {
+			#ig-Top-50-portsv2-Top_50_port_560 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:15px;
 				line-height:17px;
 				font-weight:400;
 				color:#42413c;
 			}
-			#ig-Top-50-ports-Top_50_port_560 .ig-ai-pstyle2 {
+			#ig-Top-50-portsv2-Top_50_port_560 .ig-ai-pstyle2 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:15px;
 				line-height:17px;
 				font-weight:600;
 				color:#9f3451;
 			}
-			#ig-Top-50-ports-Top_50_port_560 .ig-ai-pstyle3 {
+			#ig-Top-50-portsv2-Top_50_port_560 .ig-ai-pstyle3 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:15px;
 				line-height:17px;
 				font-weight:600;
 				color:#e8acab;
 			}
-			#ig-Top-50-ports-Top_50_port_560 .ig-ai-pstyle4 {
+			#ig-Top-50-portsv2-Top_50_port_560 .ig-ai-pstyle4 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:15px;
 				line-height:17px;
 				font-weight:400;
 				color:#a7a59a;
 			}
-			#ig-Top-50-ports-Top_50_port_560 .ig-ai-pstyle5 {
+			#ig-Top-50-portsv2-Top_50_port_560 .ig-ai-pstyle5 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:15px;
 				line-height:17px;
 				font-weight:600;
-				color:#d66f69;
+				color:#8eb6c1;
 			}
-			#ig-Top-50-ports-Top_50_port_560 .ig-ai-pstyle6 {
+			#ig-Top-50-portsv2-Top_50_port_560 .ig-ai-pstyle6 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:15px;
 				line-height:17px;
@@ -2728,7 +2728,7 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				text-align:right;
 				color:#4c4d49;
 			}
-			#ig-Top-50-ports-Top_50_port_560 .ig-ai-pstyle7 {
+			#ig-Top-50-portsv2-Top_50_port_560 .ig-ai-pstyle7 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:15px;
 				line-height:17px;
@@ -2736,7 +2736,7 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				text-align:center;
 				color:#4c4d49;
 			}
-			#ig-Top-50-ports-Top_50_port_560 .ig-ai-pstyle8 {
+			#ig-Top-50-portsv2-Top_50_port_560 .ig-ai-pstyle8 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:15px;
 				line-height:17px;
@@ -2745,17 +2745,17 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				color:#42413c;
 			}
 		</style>
-		<div id='ig-Top-50-ports-Top_50_port_560-graphic' style='position:relative'>
+		<div id='ig-Top-50-portsv2-Top_50_port_560-graphic' style='position:relative'>
 			<img id='ig-ai0-0'
 				class='ig-ai-img'
 				src='https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2FTop-50-ports-Top_50_port_560.png?source=url-builder'
 				/>
 			<div id='ig-ai0-1' class='ig-Layer_2 ig-ai-abs' style='top:0.2348%;left:0.1430%;'>
-				<p class='ig-ai-pstyle0'>China&rsquo;s booming investment in the world&rsquo;s largest ports</p>
+				<p class='ig-ai-pstyle0'>Chinese investment in the world&rsquo;s largest ports has boomed</p>
 			</div>
 			<div id='ig-ai0-2' class='ig-Layer_2 ig-ai-abs' style='top:2.9744%;left:0.1430%;'>
 				<p class='ig-ai-pstyle1'>Top 50 container ports ranked by container trafﬁc volume</p>
-				<p class='ig-ai-pstyle1'>(twenty-foot equivalent units)</p>
+				<p class='ig-ai-pstyle1'>(twenty-foot equivalent unit)</p>
 			</div>
 			<div id='ig-ai0-3' class='ig-Layer_2 ig-ai-abs' style='top:7.4361%;left:3.8281%;'>
 				<p class='ig-ai-pstyle2'>Chinese owned</p>
@@ -2955,7 +2955,7 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 			<div id='ig-ai0-62' class='ig-Layer_2 ig-ai-abs' style='top:87.8242%;left:75.2323%;'>
 				<p class='ig-ai-pstyle4'>Coco Solo</p>
 			</div>
-			<div id='ig-ai0-63' class='ig-Layer_2 ig-ai-abs' style='bottom:2.8517%;left:26.9403%;width:40.6818%;margin-left:-20.3409%;'>
+			<div id='ig-ai0-63' class='ig-Layer_2 ig-ai-abs' style='bottom:2.8517%;left:26.9400%;width:40.6808%;margin-left:-20.3404%;'>
 				<p class='ig-ai-pstyle8'>All of the world&rsquo;s</p>
 				<p class='ig-ai-pstyle8'>top 20 shipping</p>
 				<p class='ig-ai-pstyle8'>companies have</p>
@@ -2988,9 +2988,9 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 	</div>
 
 <!-- 760 -->
-<div id='ig-Top-50-ports-Top_50_port_760' class='' data-o-grid-colspan="hide M12 Mcenter">
+<div id='ig-Top-50-portsv2-Top_50_port_760' class='' data-o-grid-colspan="hide M12 Mcenter">
 		<style type='text/css' media='screen,print'>
-			#ig-Top-50-ports-Top_50_port_760{
+			#ig-Top-50-portsv2-Top_50_port_760{
 				position:relative;
 				overflow:hidden;
 			}
@@ -3001,64 +3001,64 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				display:block;
 				width:100% !important;
 			}
-			#ig-Top-50-ports-Top_50_port_760 p{
+			#ig-Top-50-portsv2-Top_50_port_760 p{
 				font-family:MetricWeb,arial,helvetica,sans-serif;
 				font-size:13px;
 				line-height:18px;
 				margin:0;
 			}
-			#ig-Top-50-ports-Top_50_port_760 .ig-ai-pstyle0 {
+			#ig-Top-50-portsv2-Top_50_port_760 .ig-ai-pstyle0 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:20px;
 				line-height:27px;
 				font-weight:400;
 				color:#9f3451;
 			}
-			#ig-Top-50-ports-Top_50_port_760 .ig-ai-pstyle1 {
+			#ig-Top-50-portsv2-Top_50_port_760 .ig-ai-pstyle1 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:16px;
 				font-weight:400;
 				color:#42413c;
 			}
-			#ig-Top-50-ports-Top_50_port_760 .ig-ai-pstyle2 {
+			#ig-Top-50-portsv2-Top_50_port_760 .ig-ai-pstyle2 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:16px;
 				font-weight:600;
 				color:#9f3451;
 			}
-			#ig-Top-50-ports-Top_50_port_760 .ig-ai-pstyle3 {
+			#ig-Top-50-portsv2-Top_50_port_760 .ig-ai-pstyle3 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:16px;
 				font-weight:600;
 				color:#e8acab;
 			}
-			#ig-Top-50-ports-Top_50_port_760 .ig-ai-pstyle4 {
+			#ig-Top-50-portsv2-Top_50_port_760 .ig-ai-pstyle4 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:16px;
 				font-weight:400;
 				color:#a7a59a;
 			}
-			#ig-Top-50-ports-Top_50_port_760 .ig-ai-pstyle5 {
+			#ig-Top-50-portsv2-Top_50_port_760 .ig-ai-pstyle5 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:16px;
 				font-weight:600;
-				color:#d66f69;
+				color:#8eb6c1;
 			}
-			#ig-Top-50-ports-Top_50_port_760 .ig-ai-pstyle6 {
+			#ig-Top-50-portsv2-Top_50_port_760 .ig-ai-pstyle6 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:16px;
 				font-weight:400;
 				text-align:right;
 				color:#4c4d49;
 			}
-			#ig-Top-50-ports-Top_50_port_760 .ig-ai-pstyle7 {
+			#ig-Top-50-portsv2-Top_50_port_760 .ig-ai-pstyle7 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:16px;
 				font-weight:400;
 				text-align:center;
 				color:#4c4d49;
 			}
-			#ig-Top-50-ports-Top_50_port_760 .ig-ai-pstyle8 {
+			#ig-Top-50-portsv2-Top_50_port_760 .ig-ai-pstyle8 {
 				font-family:MetricWeb,arial,sans-serif;
 				font-size:16px;
 				font-weight:400;
@@ -3066,16 +3066,16 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 				color:#42413c;
 			}
 		</style>
-		<div id='ig-Top-50-ports-Top_50_port_760-graphic' style='position:relative'>
+		<div id='ig-Top-50-portsv2-Top_50_port_760-graphic' style='position:relative'>
 			<img id='ig-ai2-0'
 				class='ig-ai-img'
 				src='https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2FTop-50-ports-Top_50_port_760.png?source=url-builder'
 				/>
 			<div id='ig-ai2-1' class='ig-Layer_2 ig-ai-abs' style='top:0.0000%;left:0.2632%;'>
-				<p class='ig-ai-pstyle0'>China&rsquo;s booming investment in the world&rsquo;s largest ports</p>
+				<p class='ig-ai-pstyle0'>Chinese investment in the world&rsquo;s largest ports has boomed</p>
 			</div>
 			<div id='ig-ai2-2' class='ig-Layer_2 ig-ai-abs' style='top:3.5682%;left:0.2632%;'>
-				<p class='ig-ai-pstyle1'>Top 50 container ports ranked by container trafﬁc volume (twenty-foot equivalent units)</p>
+				<p class='ig-ai-pstyle1'>Top 50 container ports ranked by container trafﬁc volume (twenty-foot equivalent unit)</p>
 			</div>
 			<div id='ig-ai2-3' class='ig-Layer_2 ig-ai-abs' style='top:6.8619%;left:2.8209%;'>
 				<p class='ig-ai-pstyle2'>Chinese owned</p>
@@ -3165,7 +3165,7 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 			<div id='ig-ai2-30' class='ig-Layer_2 ig-ai-abs' style='top:40.4395%;left:80.3756%;'>
 				<p class='ig-ai-pstyle2'>Qianwan (Qingdao)</p>
 			</div>
-			<div id='ig-ai2-31' class='ig-Layer_2 ig-ai-abs' style='top:41.7204%;left:60.7697%;width:53.3977%;margin-left:-26.6988%;'>
+			<div id='ig-ai2-31' class='ig-Layer_2 ig-ai-abs' style='top:41.7204%;left:60.7698%;width:53.3979%;margin-left:-26.6990%;'>
 				<p class='ig-ai-pstyle8'>Colombo International</p>
 				<p class='ig-ai-pstyle8'>Container Terminal more than</p>
 				<p class='ig-ai-pstyle8'>doubled its container throughput</p>
@@ -5092,7 +5092,7 @@ The financial firepower at China’s disposal can make its entreaties irresistib
 <figure class="graphic graphicWidth">
   <img alt="Xi Jinping, China's president, and former Sri Lankan leader Mahinda Rajapaksa image" src="https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fft-ig-content-prod.s3.amazonaws.com%2Fv1%2Fft-interactive%2Fchinese-shipping%2Fimages%2FsriLanka.jpg?source=url-builder"></img>
     <figcaption class="o-typography-caption">
-    Xi Jinping, China's president, and former Sri Lankan leader Mahinda Rajapaksa at the the Chinese-funded Colombo “port city” project in 2014 © Lakruwan Wanniarachchi/AFP/Getty Images
+    Xi Jinping, China's president, and former Sri Lankan leader Mahinda Rajapaksa at the  Chinese-funded Colombo “port city” project in 2014 © Lakruwan Wanniarachchi/AFP/Getty Images
   </figcaption>
 </figure>
 
