--- a/client/index.html
+++ b/client/index.html
@@ -829,7 +829,7 @@
 
 <br>
 
-Pakistan’s Arabian Sea port of Gwadar is perched on the world’s energy jugular. Offshore sea lanes nearby carry most of China’s oil imports; any disruption could choke the world’s second-largest economy.
+Pakistan’s Arabian Sea port of Gwadar is perched on the world’s energy jugular. Sea lanes nearby carry most of China’s oil imports; any disruption could choke the world’s second-largest economy.
 
 Owned, financed and built by China, Gwadar occupies a strategic location. Yet Islamabad and Beijing for years denied any military plans for the harbour, insisting it was a purely commercial project to boost trade. Now the mask is slipping.
 
@@ -3317,7 +3317,7 @@ In terms of container ports, China already rules the waves. Nearly two-thirds of
 
 <!--  Top 50 Container hubs ends -->
 
-And those ports handled 67 per cent of global container volumes, up from 42 per cent in 2010, according to Lloyd’s List Intelligence, the shipping research company. If only containers directly handled by Chinese port operators are measured, the level of dominance is reduced but still emphatic. Of the top 10 port operators worldwide, Chinese companies handled 39 per cent of all volumes, almost double the second largest nation group, according to data from Drewry.
+And those ports handled 67 per cent of global container volumes, up from 42 per cent in 2010, according to Lloyd’s List Intelligence, the maritime and trade data specialists. If only containers directly handled by Chinese port operators are measured, the level of dominance is reduced but still emphatic. Of the top 10 port operators worldwide, Chinese companies handled 39 per cent of all volumes, almost double the second largest nation group, according to data from Drewry.
 
 <!-- Port traffic start -->
 
@@ -5085,7 +5085,7 @@ At the time, China claimed the project was purely commercial. Hong Lei, a spokes
 
 To the west of Gwadar at Djibouti — on the Horn of Africa’s maritime chokepoint — a similar story has unfolded. China’s initial embrace seemed purely commercial, with the state-owned China Merchants Group taking a stake in the Port of Djibouti’s container terminal in 2012 and paving the way for a $9bn investment including the construction of a liquefied natural gas terminal, a wharf for livestock and a trade logistics park.
 
-But in 2016, Beijing acknowledged that its plans for Djibouti had an additional dimension — the construction of the <a href="https://www.ft.com/content/59ad20d6-f74b-11e5-803c-d27c7117d132">country’s first overseas naval base</a>, ensuring that China’s military presence will remain in the Gulf region until at least 2026 with a contingent of up to 10,000 personnel. Even now, though, Beijing’s official media calls the base a “logistics centre”.
+But in 2016, Beijing acknowledged that its plans for Djibouti had an additional dimension — the construction of the <a href="https://www.ft.com/content/59ad20d6-f74b-11e5-803c-d27c7117d132">country’s first overseas naval base</a>, ensuring that China’s military will remain in the region until at least 2026 with a contingent of up to 10,000 personnel. Even now, though, Beijing’s official media calls the base a “logistics centre”.
 
 The financial firepower at China’s disposal can make its entreaties irresistible. In Sri Lanka, President Maithripala Sirisena suspended a $1.4bn “port city” project being built by Chinese companies at Colombo shortly after he took power in 2015. Mr Sirisena was wary over China’s growing influence, as dramatised by two unannounced visits from a PLAN submarine and warship to a Colombo container terminal owned by a Chinese state company in late 2014.
 
